--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,12 +26,10 @@ loggingInterceptor = "3.1.0"
 retrofit = "2.9.0"
 coroutines = "1.10.1"
 rxAndroid = "3.0.0"
-rxJavaVersion = "3.1.0"
 ksp = "2.1.20-2.0.0"
-kotlinx-serialization-verison = "1.6.2"
 kotlinPlugin = "1.8.10"
 coilCompose = "3.1.0"
-hiltNavigationCompose = "1.2.0"
+paging-version = "3.3.0"
 
 #Glide
 glide = "4.16.0"
@@ -49,25 +47,14 @@ materialVersion = "1.12.0"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-ui-ktx" }
-androidx-navigation-compose= { module = "androidx.navigation:navigation-compose", version.ref = "navigation-ui-ktx" }
+androidx-paging = { module = "androidx.paging:paging-runtime", version.ref = "paging-version" }
 
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ui-ktx" }
@@ -92,17 +79,11 @@ ssp = { module = "com.intuit.ssp:ssp-android", name = "ssp", version.ref = "sdps
 androidx-viewbinding = { group = "androidx.databinding", name = "viewbinding", version.ref = "viewbinding" }
 
 #coroutines
-kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
-kotlin-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 rxjava = "com.squareup.retrofit2:adapter-rxjava:2.0.2"
 rxAndroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxAndroid" }
 
 #LifeCycle
 lifecycle-livedataKtx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
-lifecycle-runtimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
-#Okhttp
-#okhttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-okhttp-mockwebserver = { module = "com.github.ihsanbal:LoggingInterceptor", version.ref = "okhttp" }
 timber = "com.jakewharton.timber:timber:5.0.1"
 
 #retrofit
@@ -110,10 +91,6 @@ retrofit-gsonConverter = { module = "com.squareup.retrofit2:converter-gson", ver
 retrofit-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 okhttp-interceptor = { module = "com.github.ihsanbal:LoggingInterceptor", version.ref = "loggingInterceptor" }
 gson-gson = "com.google.code.gson:gson:2.11.0"
-#retrofit-r-adapter = { module = "com.squareup.retrofit2:adapter-rxjava3", version.ref = "rxJavaVersion" }
-#kotlinx-serialization
-#kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-verison" }
-
 retrofit-moshi-converter = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 
 #testing
@@ -130,7 +107,6 @@ test_flow_turbine = { module = "app.cash.turbine:turbine", version.ref = "turbin
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt-version" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlinx-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlinPlugin" }
@@ -141,4 +117,3 @@ navigation-safeargs = { id = "androidx.navigation.safeargs", version.ref = "navi
 [bundles]
 networking = ["gson-gson", "retrofit-gsonConverter",
     "retrofit-retrofit", "rxjava", "rxAndroid", "retrofit-moshi-converter"]
-coil = ["coil-compose", "coil-network-okhttp"]
