--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".core.MyApp"
+        android:enableOnBackInvokedCallback="true"
         android:theme="@style/Theme.BS23TaskPritom"
-        tools:targetApi="31">
+        tools:targetApi="33">
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
