--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ lifecycle = "2.8.7"
 lifecycle-viewmodel-ktx = "2.8.7"
 navigation-fragment-ktx = "2.7.7"
 navigation-ui-ktx = "2.8.9"
+swiperefreshlayout = "1.2.0-beta01"
 viewbinding = "8.9.2"
 turbine = "1.1.0"
 
@@ -47,6 +48,7 @@ materialVersion = "1.12.0"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
